@@ -190,7 +190,7 @@ sub string {
 	my @s = map split( '', $_ ), @$self;			# escape special and ASCII non-printable
 	my $string = _decode_utf8( join '', map $escape{$_}, @s );
 
-	return $string unless $string =~ /[ \t\n\r\f]|^$/;	# unquoted contiguous
+	return $string unless $string =~ /[ \t\n\r\f"]|^$/;	# unquoted contiguous
 
 	$string =~ s/\\([^"0-9])/$1/g;				# unescape printable characters except \"
 	join '', '"', $string, '"';				# quoted string
